--- a/client/css/instagramClone.css
+++ b/client/css/instagramClone.css
@@ -212,9 +212,10 @@ body {
 	letter-spacing: 4px;
 	display: inline-block;
 	font-weight: bold;
+	font-size: 20px;
 }
 #f1{
-	margin: 0 15px 0 40%;
+	margin: 0 15px 0 37%;
 }
 #f2{
 	margin: 0 15px 0 15px;
