--- a/client/css/instagramClone.css
+++ b/client/css/instagramClone.css
@@ -170,6 +170,8 @@ body {
 	text-align: left;
 	padding-left: 20px;
 	padding-right: 20px;
+	vertical-align: middle;
+	font-size: 20px;
 }
 .gallery .thumbnail p {
 	margin: 0;
