--- a/client/views/loginAndRegistration.html
+++ b/client/views/loginAndRegistration.html
@@ -46,7 +46,7 @@
               </form>
             </div>
             <div id="register" class="animate form">
-              <form  action="/" autocomplete="on"> 
+              <form  action="/register" method="POST" autocomplete="on"> 
                 <h1> Sign up </h1> 
                 <p> 
                   <label for="usernamesignup" class="uname" data-icon="u">Your username</label>
