--- a/client/views/forgotPassword.html
+++ b/client/views/forgotPassword.html
@@ -7,16 +7,59 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
 		<link href='//fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900' rel='stylesheet' type='text/css'>
+	    <script src="../js/jquery-3.2.1.min.js"></script>
+        <script src="../js/bootstrap.min.js"></script>
+        
+		<script>
+            /*global $*/
+            function handleResetAttempt(){
+                var email = $('#email').val();
+                var password = $('#password').val();
+                var repeatPassword = $('#repeat_password').val();
+                
+                if (email.length > 0 && password.length > 0 && repeatPassword.length > 0 && password == repeatPassword){
+                    Promise.resolve()
+                    .then(function(){
+                        return $.post('passwordreset', {email: email, password: password});
+                    })
+                    .then(function(data){
+                    	if(data.isValid)
+                    	{
+                              $('#error').html(data.message);
+                    	}
+                    	else
+                    	{
+                    		 $('#error').html(data.message);
+                    	}
+                    })
+                    .catch(function(err){
+                        console.log(err);
+                    })
+                } else {
+                    $('#error').html('Invalid Email or Password');
+                }
+            }
+
+        </script>
+		
 	</head>
 	<body>
 		<div class="elelment">
 			<h2>Forgot password?</h2>
 			<div class="element-main">
+				 <p id="error"></p>
 				<h1>Reset Password</h1>
 				<p>We can help you reset your password using your Instagram username or the email address linked to your account.</p>
 				<form>
-					<input type="text" value="Your e-mail address" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Your e-mail address';}">
-					<input type="submit" value="Reset Password">
+					<!--
+					<input type="text" id="email" value="recievewebdesign@gmail.com" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'E-mail address';}">
+					-->
+					
+					<input type="text" id="email" >
+					<input type="text" id="password" >
+					<input type="text" id="repeat_password" >
+					<input type="button" value="Reset Password" onclick="handleResetAttempt()">
+		
 				</form>
 			</div>
 		</div>
