--- a/client/views/loginAndRegistration.html
+++ b/client/views/loginAndRegistration.html
@@ -35,7 +35,7 @@
                         console.log(err);
                     })
                 } else {
-                    $('#error').html('Please provide both username and password');
+                    $('#error').html('Invalid Email or Password');
                 }
             }
 
@@ -61,11 +61,11 @@
                 <h1>Log in</h1> 
                 <p> 
                   <label for="email" class="uname" data-icon="u" > Your email</label>
-                  <input name="email" required="required" type="text" placeholder="Email" value="a@gmail.com" id="email"/>
+                  <input name="email" required="required" type="text" placeholder="Email" id="email"/>
                 </p>
                 <p> 
                   <label for="password" class="youpasswd" data-icon="p"> Your password </label>
-                  <input name="password" required="required" type="password" placeholder="Password" value="12345" id="password"/> 
+                  <input name="password" required="required" type="password" placeholder="Password" id="password"/> 
                 </p>
                 <p class="keeplogin"> 
   							  <input type="checkbox" name="loginkeeping" id="loginkeeping" value="loginkeeping" /> 
