verify password issue

--- a/client/views/forgotPassword.html
+++ b/client/views/forgotPassword.html
@@ -56,8 +56,8 @@
 					-->
 					
 					<input type="text" id="email" >
-					<input type="text" id="password" >
-					<input type="text" id="repeat_password" >
+					<input type="password" id="password" >
+					<input type="password" id="repeat_password">
 					<input type="button" value="Reset Password" onclick="handleResetAttempt()">
 		
 				</form>
