--- a/client/css/instagramClone.css
+++ b/client/css/instagramClone.css
@@ -267,3 +267,16 @@ body {
 #profileImage {
 	width: 50%;
 }
+
+#logout {
+	display: block;
+	padding: 5%;
+	cursor: pointer;
+	color: #FFFFFF;
+	background-color: #3897f0;
+	font-family: Arial;
+	font-weight: bold;
+	letter-spacing: normal;
+	margin-left: auto;
+	margin-bottom: 10%;
+}
