--- a/client/templates/header.html
+++ b/client/templates/header.html
@@ -7,10 +7,9 @@
   <input placeholder="Search" value="" type="text" alt="Search box">
 </div>
 <div class="header_right">
-  <button type="button" id="logout">Log Out</button>
-  <img src="img/icons/icon1.png" alt="History">
   <img src="img/icons/icon2.png" alt="Favorite photos">
-  <img src="img/icons/icon3.png" alt="User profile">
+  <img src="img/icons/icon3.png" alt="Profile">
+  <img src="img/icons/icon1.png" alt="Logout" id="logout">
 </div>
 
 <script>
