--- a/client/css/forgotPassword.css
+++ b/client/css/forgotPassword.css
@@ -42,7 +42,7 @@ a:hover {
     font-size: 2.5em;
     color: #A3A3A3;
     text-align: center;
-    margin-top:2em;
+    margin-top:1em;
     font-weight: 700;
 }
 .element-main {
@@ -76,6 +76,17 @@ a:hover {
     text-align:center;
     border: 1px solid #B9B9B9;
 }
+.element-main input[type="password"] {
+    font-size: 1em;
+    color: #B3B3B3;
+    padding: 1em 0.5em;
+    display: block;
+    width: 95%;
+    outline: none;
+    margin-bottom: 1em;
+    text-align:center;
+    border: 1px solid #B9B9B9;
+}
 .element-main input[type="submit"] {
     font-size: 1em;
     border: 3px solid #6DC7D0;
@@ -99,7 +110,7 @@ a:hover {
 }
 /*---copyrights--*/
 .copy-right {
-    margin: 9em 0em 2em 0em;
+    margin: 4em 0em 2em 0em;
 }
 .copy-right p {
     text-align: center;
