--- a/client/views/forgotPassword.html
+++ b/client/views/forgotPassword.html
@@ -1,8 +1,23 @@
+<!-- Group information:
+
+Student 1:
+
+Tran Ngoc Phuong Dang (a.k.a Daniel). Student number: 7843618
+
+Student 2:
+
+Chi Hieu Tran (a.k.a Winson). Student number: 7822620
+
+Student 3:
+
+Duncan Robertson. Student number: 8074833 -->
+
 <!DOCTYPE HTML>
 <html>
 	<head>
 		<title>Reset Password</title>
 		<link href="../css/forgotPassword.css" rel="stylesheet" type="text/css" media="all"/>
+		<link href="../css/hide.css" rel="stylesheet" type="text/css" media="all"/>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
@@ -12,33 +27,48 @@
         
 		<script>
             /*global $*/
-            function handleResetAttempt(){
+            $(document).ready( ()=> {
+              $('#resetForm').submit( ()=> {
                 var email = $('#email').val();
                 var password = $('#password').val();
                 var repeatPassword = $('#repeat_password').val();
-                
-                if (email.length > 0 && password.length > 0 && repeatPassword.length > 0 && password == repeatPassword){
-                    Promise.resolve()
-                    .then(function(){
-                        return $.post('passwordreset', {email: email, password: password});
-                    })
-                    .then(function(data){
-                    	if(data.isValid)
-                    	{
-                              $('#error').html(data.message);
-                    	}
-                    	else
-                    	{
-                    		 $('#error').html(data.message);
-                    	}
-                    })
-                    .catch(function(err){
-                        console.log(err);
-                    })
-                } else {
-                    $('#error').html('Invalid Email or Password');
+                var error = '';
+                	var regex = /^[a-z A-Z 0-9]+$/;
+                	if (regex.test(email)) {
+	                	error += 'Invalid email!'
+	                	$('#error').html(error);
+	                } else if (password.length == 0) {
+	                	error += 'Please enter your new password!'
+	                	$('#error').html(error);
+	                } else if (password.length < 6) {
+	                	error += 'New password must include at least 6 characters!'
+	                	$('#error').html(error);
+	                } else if (repeatPassword.length == 0) {
+	                	error += 'Please confirm your password!'
+	                	$('#error').html(error);
+	                } else if (repeatPassword.length < 6) {
+	                	error += 'Confirm password must include at least 6 characters!'
+	                	$('#error').html(error);
+	                } else if (password != repeatPassword) {
+	                	error += 'New password and confirm password do not match!'
+	                	$('#error').html(error);
+	                } else {
+	                	Promise.resolve()
+	                    .then(function(){
+	                        return $.post('passwordreset', {email: email, password: password});
+	                    })
+	                    .then(function(data){
+	                    	$('#error').html(data.message);
+	                    	if(data.isValid)
+	                    	{
+	                              $('#error').css('color','#3897f0');
+	                              $('#desc').addClass('hide');
+	                              $('#resetForm').addClass('hide');
+	                    	}
+	                    })
                 }
-            }
+              });
+            });
 
         </script>
 		
@@ -47,19 +77,17 @@
 		<div class="elelment">
 			<h2>Forgot password?</h2>
 			<div class="element-main">
-				 <p id="error"></p>
 				<h1>Reset Password</h1>
-				<p>We can help you reset your password using your Instagram username or the email address linked to your account.</p>
-				<form>
-					<!--
-					<input type="text" id="email" value="recievewebdesign@gmail.com" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'E-mail address';}">
-					-->
-					
-					<input type="text" id="email" >
-					<input type="password" id="password" >
+				<p id="desc">We can help you reset your password using your Instagram email address linked to your account.</p>
+				<p id="error" style="color: #ed4956;"></p>
+				<form id="resetForm" onSubmit="return false;" autocomplete="on"> 
+					<input type="text" id="email" value="Please enter your email address" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Please enter your email address';}">
+					<p>Please enter your password<p>
+					<input type="password" id="password">
+					<p>Please confirm your password<p>
 					<input type="password" id="repeat_password">
-					<input type="button" value="Reset Password" onclick="handleResetAttempt()">
-		
+					<p></p>
+					<input type="submit" value="Reset my password">
 				</form>
 			</div>
 		</div>
