--- a/client/views/loginAndRegistration.html
+++ b/client/views/loginAndRegistration.html
@@ -38,7 +38,6 @@ Duncan Robertson. Student number: 8074833 -->
                         return $.post('signin', 'username=' + email + '&password=' + password);
                     })
                 .then(function(auth){
-                  $('#error').html(auth.isValid);
                         if (auth.isValid){
                             window.location.replace('index');
                         } else {
@@ -162,7 +161,7 @@ Duncan Robertson. Student number: 8074833 -->
                 
                 <p> 
                   <label for="email" class="uname" data-icon="u" > Your email</label>
-                  <input name="email" required="required" type="text" placeholder="Email" id="email"/>
+                  <input name="email" required="required" type="email" placeholder="Email" id="email"/>
                 </p>
                 <p> 
                   <label for="password" class="youpasswd" data-icon="p"> Your password </label>
