edit email format for forgotPassword function

--- a/client/views/forgotPassword.html
+++ b/client/views/forgotPassword.html
@@ -61,7 +61,7 @@ Duncan Robertson. Student number: 8074833 -->
 	                    	$('#error').html(data.message);
 	                    	if(data.isValid)
 	                    	{
-	                              $('#error').css('color','#3897f0');
+	                              $('#error').css('color','#ffffff');
 	                              $('#desc').addClass('hide');
 	                              $('#resetForm').addClass('hide');
 	                    	}
