Add post list, post details and upload pages

--- a/client/templates/header.html
+++ b/client/templates/header.html
@@ -7,8 +7,8 @@
   <input placeholder="Search" value="" type="text" alt="Search box">
 </div>
 <div class="header_right">
-  <img src="img/icons/icon2.png" alt="Favorite photos">
-  <img src="img/icons/icon3.png" alt="Profile">
+  <a href="../views/postDetails.html"><img src="img/icons/icon2.png" alt="Favorite photos"></a>
+  <a href="../views/upload.html"><img src="img/icons/icon3.png" alt="Profile"></a>
   <img src="img/icons/icon1.png" alt="Logout" id="logout">
 </div>
 
