Post upload and post view
Initial implementation of post upload and view functions

--- a/client/css/upload.css
+++ b/client/css/upload.css
@@ -13,6 +13,11 @@
 	outline: none;
 }
 
+#msgBox {
+	text-align: center;
+	margin-bottom: 1em;
+}
+
 /* Form Container */
 .upload-form {
 	position: relative;
