--- a/client/css/postDetails.css
+++ b/client/css/postDetails.css
@@ -28,6 +28,7 @@ table { border-collapse: collapse; border-spacing: 0; }
 img { border: 0; max-width: 100%; }
 
 h1 { font-family: 'Wellfleet', 'Trebuchet MS', Tahoma, Arial, sans-serif; font-size: 2.85em; line-height: 1.6em; font-weight: normal; color: #756f8b; text-shadow: 0px 1px 1px #fff; margin-bottom: 21px; }
+h3 { font-family: 'Wellfleet', 'Trebuchet MS', Tahoma, Arial, sans-serif; font-size: 1.5em; line-height: 1.6em; font-weight: normal; color: #756f8b; text-shadow: 0px 1px 1px #fff; }
 
 p { font-family: Arial, Geneva, Verdana, sans-serif; font-size: 1.3em; line-height: 1.42em; margin-bottom: 12px; font-weight: normal; color: #656565; }
 
@@ -80,3 +81,20 @@ a:hover { text-decoration: underline; }
 #comments .cmmnt .cmmnt-content header .userlink { font-weight: bold; } 
 
 #comments .cmmnt .replies { margin-bottom: 7px; }
+
+
+#imageContent {
+  text-align: center;
+  background-color: #FFFFFF;
+  padding: 3em 0 3em 0;
+}
+
+.buffer {
+  overflow: auto;
+  padding: 0 2em 0 2em;
+  background-color: #FFFFFF;
+}
+
+#header {
+  border-bottom: 1px solid #ddd;
+}
