--- a/client/views/forgotPassword.html
+++ b/client/views/forgotPassword.html
@@ -83,9 +83,9 @@ Duncan Robertson. Student number: 8074833 -->
 				<form id="resetForm" onSubmit="return false;" autocomplete="on"> 
 					<input type="text" id="email" value="Please enter your email address" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Please enter your email address';}">
 					<p>Please enter your password<p>
-					<input type="password" id="password">
+					<input type="password" id="password" placeholder="Password">
 					<p>Please confirm your password<p>
-					<input type="password" id="repeat_password">
+					<input type="password" id="repeat_password" placeholder="Confirm Password">
 					<p></p>
 					<input type="submit" value="Reset my password">
 				</form>
