--- a/client/css/forgotPassword.css
+++ b/client/css/forgotPassword.css
@@ -214,3 +214,16 @@ a:hover {
 }
 }
 /*--media quiries end here--*/
+
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  color: #B3B3B3;
+}
+::-moz-placeholder { /* Firefox 19+ */
+  color: #B3B3B3;
+}
+:-ms-input-placeholder { /* IE 10+ */
+  color: #B3B3B3;
+}
+:-moz-placeholder { /* Firefox 18- */
+  color: #B3B3B3;
+}
