--- a/client/templates/header.html
+++ b/client/templates/header.html
@@ -4,7 +4,7 @@
   <img src="img/logo/logo_img3.png" alt="Brand">
 </div>
 <div class="header_center">
-  <form onsubmit="search()"><input id="searchBox" placeholder="Search" value="" type="text" alt="Search box"></form>
+  <form action=" " onsubmit="return false;" id="search"><input id="searchBox" placeholder="Search" value="" type="text" alt="Search box"></form>
     
   
 </div>
@@ -23,15 +23,13 @@
     });
   });
   
-  function search()
-      {
-        Promise.resolve()
-            .then(() => {
-              return $.post('/searchUser', {user: $('#searchBox').val()});
-            })
-            .done((user) => {
-              console.log(user._id);
-              window.location.href = '/postList?id=' + user._id;
-            });
-      }
+  $('#search').submit( () => {
+    $.post('/searchUser', {user: $('#searchBox').val()})
+    .done((user) => {
+      console.log(user._id);
+      window.location.replace('/postList?id=' + user._id);
+    })
+    console.log('search test')
+    return false;
+  })
 </script>
