--- a/client/views/index.html
+++ b/client/views/index.html
@@ -96,7 +96,7 @@ Duncan Robertson. Student number: 8074833 -->
         } else {
           for (var j = 0; j < postsCount; j++) {
             $('#postContainer0').append('<div class="thumbnail">\
-                <a href="#">\
+                <a href="" id="link' + userProfile._id + j + '">\
                   <img src="" class="cards" id="thumbnail0' + userProfile._id + j +'"/>\
                 </a>\
                 <h4>\
