--- a/client/views/index.html
+++ b/client/views/index.html
@@ -73,8 +73,7 @@ Duncan Robertson. Student number: 8074833 -->
           <div id="postContainer0">\
           </div>\
         </div>');
-        if(postsCount <= 4)
-        {
+        if(postsCount <= 4){
           addUserPosts(userProfile, postsCount);
         } else {
           addUserPosts(userProfile, 4);
